--- a/GCloudBuild/Dockerfile
+++ b/GCloudBuild/Dockerfile
@@ -5,7 +5,9 @@ RUN mkdir -p /wis/windows
 RUN chown apache2 /wis/system /wis/system/bin /wis/windows
 RUN chgrp apache2 /wis/system /wis/system/bin /wis/windows
 
-RUN echo '<h1>HELLO WORLD</h1>' > /var/www/html/index.html
+COPY lib_wis_core_framework/build/onix_core_framework.phar /wis/system/bin
+COPY lib_wis_erp_framework/build/onix_erp_framework.phar /wis/system/bin
+COPY app_onix/onix_server/scripts/* /wis/system/bin
 
 COPY GCloudBuild/alias.conf /tmp
 RUN cat /tmp/alias.conf >> /etc/apache2/apache2.conf
