--- a/GCloudBuild/Dockerfile
+++ b/GCloudBuild/Dockerfile
@@ -7,7 +7,7 @@ RUN chgrp apache2 /wis/system /wis/system/bin /wis/windows
 
 COPY lib_wis_core_framework/build/onix_core_framework.phar /wis/system/bin
 COPY lib_wis_erp_framework/build/onix_erp_framework.phar /wis/system/bin
-COPY app_onix/onix_server/scripts/* /wis/system/bin
+COPY app_onix/onix_server/scripts/* /wis/system/bin/
 
 COPY GCloudBuild/alias.conf /tmp
 RUN cat /tmp/alias.conf >> /etc/apache2/apache2.conf
