--- a/GCloudBuild/Dockerfile
+++ b/GCloudBuild/Dockerfile
@@ -5,6 +5,10 @@ RUN mkdir -p /wis/windows
 RUN chown apache2 /wis/system /wis/system/bin /wis/windows
 RUN chgrp apache2 /wis/system /wis/system/bin /wis/windows
 
+RUN cd /workspace/lib_wis_core_framework \
+    && php onix_core_framework_build.php \
+    && cd ..
+
 COPY lib_wis_core_framework/build/onix_core_framework.phar /wis/system/bin
 COPY lib_wis_erp_framework/build/onix_erp_framework.phar /wis/system/bin
 COPY app_onix/onix_server/scripts/* /wis/system/bin/
